--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body><br><br><br>
     <h1 class="heading">Video download Application</h1><br><br><br>
     <img class="icon" src="img/upload-2244780.png"><b><figcaption>VD</figcaption></b>
-    <a href="video-download.apk">
+    <a href="vd.apk">
         <img src="img/download-155425_1280.png" class="down" width="250px">
     </a><br><br>
     <div class="social">
